[package]
name = "test_storage"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
tikv_util = { path = "../tikv_util" }
tikv = { path = "../../", default-features = false }
test_raftstore = { path = "../test_raftstore" }
kvproto = { git = "https://github.com/zhangjinpeng1987/kvproto.git", branch = "cold-hot-separator" }
futures = "0.1"
